# DazToMaya

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json
Daz Studio/appdir_common/scripts/support/DAZ/: Daz to Maya.dsa  DzMayaMorphSelectionDialog.dsa  DzMayaSilentExporter.dsa  DzMayaSubdivisionDialog.dsa
Daz Studio/appdir_common/scripts/support/DAZ/dzBridgeUtils/: DzMayaAutoWeight.dsa  DzMayaBridgeExporter.dsa  DzMayaDforce.dsa  DzMayaDialog.dsa  DzMayaEnvironment.dsa  DzMayaFigure.dsa  DzMayaHelpers.dsa  DzMayaMorphSelectionDialog.dsa  DzMayaMorphs.dsa  DzMayaPose.dsa  DzMayaScene.dsa  DzMayaSubdivision.dsa  DzMayaWriter.dsa
DazStudioPlugin/: CMakeLists.txt  DzMayaAction.cpp  DzMayaAction.h  DzMayaBridge.aps  DzMayaBridge.rc  DzMayaDialog.cpp  DzMayaDialog.h  pluginmain.cpp  real_version.h  resource.h  version.h
DazStudioPlugin/Resources/: resources.qrc
DazStudioPlugin/Resources/Scripts/: bake_pivots_and_instances_nogui.dsa  create_maya_file.py
Maya/MAYA_APP_DIR/modules/: DazToMaya.mod
Maya/MAYA_APP_DIR/modules/DazToMaya/scripts/: DAZTools.mel  DazToMaya.py  Definitions.py  DtuLoader.py  DtuStorage.py  TextureLib.py  d2m.cfg  d2m.py  d2m_serial.xml  dazmaterials.py  ikmax_menu.py  morphs.py
Maya/MAYA_APP_DIR/modules/DazToMaya/scripts/AETemplates/: AEtransform.MorphsTemplate.xml
Maya/MAYA_APP_DIR/modules/DazToMaya/shelves/: shelf_DazToMaya.mel
Maya/MAYA_APP_DIR/plug-ins/: DazToMaya.py
Maya/MAYA_APP_DIR/plug-ins/DazToMaya_Files/: d2m.py  d2m_menu.py  ikmax_menu.py
Maya/MAYA_SCRIPT_PATH/: DAZTools.mel
Test/Results/: TestResults_DzMayaAction.json  TestResults_DzMayaAction.txt  TestResults_DzMayaDialog.json  TestResults_DzMayaDialog.txt
Test/TestCases/: QA_Utility_Functions.dsa
Test/UnitTests/: CMakeLists.txt  RunUnitTests.dsa  UnitTest_DzMayaAction.cpp  UnitTest_DzMayaAction.h  UnitTest_DzMayaDialog.cpp  UnitTest_DzMayaDialog.h
docs/developers/api/: dazstudio.md
